--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile group: "net.shadowfacts", name: "Forgelin", version: "1.7.3"
+    compile "net.shadowfacts:Forgelin:1.7.3"
     embed "io.github.hedgehog1029:frame:1.1.0-PRE"
 }
 
