uh oh he's made a coremod to fix one tiny thing

--- a/build.gradle
+++ b/build.gradle
@@ -88,4 +88,9 @@ processResources {
 
 jar {
     from configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
+
+    manifest {
+        attributes "FMLCorePlugin": "gq.genprog.autocrat.AutocratLoadingPlugin",
+                "FMLCorePluginContainsFMLMod": "true"
+    }
 }
