Update Frame integration to be Brigadier-compatible

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "[28,)"
-issueTrackerURL = "github.com/general-programming/autocrat/issues"
+issueTrackerURL = "https://github.com/general-programming/autocrat/issues"
 showAsResourcePack = false
 
 [[mods]]
