--- a/build.gradle
+++ b/build.gradle
@@ -96,24 +96,11 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:1.14.4-28.2.0"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "net.shadowfacts:Forgelin:1.7.3"
-    embed "io.github.hedgehog1029:frame:1.2.0-PRE"
-    compile "silly511.backups:Backups:1.12.2-1.3"
+    embed "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    embed "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    embed "io.github.hedgehog1029:frame:1.4.0-PRE"
 }
 
 jar {
     from configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }
-
-    manifest {
-        attributes([
-            "Specification-Title": "autocrat",
-            "Specification-Vendor": "General Programming",
-            "Specification-Version": "1", // We are version 1 of ourselves
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"General Programming",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-        ])
-    }
 }
